--- a/to-do-list.vcxproj.filters
+++ b/to-do-list.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="to-do-list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ToDoItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ToDoItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
