--- a/to-do-list.vcxproj
+++ b/to-do-list.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="to-do-list.cpp" />
+    <ClCompile Include="ToDoItem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ToDoItem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
